# vpg

./: .gitignore  DESIGN_CHANGES.md  Makefile  README.md  plan.md  pyproject.toml  test.c  v.mod  vpg.c  vpg.h  vpg.v  vpg_findtimezone.c  vpg_initdb.c
cmd/: vpg_smoke.v  vpg_test.v
initdb/: vpg_bki_support.c  vpg_bootstrap.c  vpg_bootstrap.h  vpg_fe_shim.c  vpg_initdb.c  vpg_setup.c  vpg_setup.h
tests/: python_smoke.py
tools/: bindgen.v
vpg/: vpg_cffi.py
