[build-system]
requires = ["setuptools>=70.1"]
build-backend = "setuptools.build_meta"

[project]
name = "vpg"
version = "0.1.0"
description = "Single-process embedded PostgreSQL wrapper for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cffi>=1.16",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Ladybug-Memory/vpg"
Repository = "https://github.com/Ladybug-Memory/vpg"

[tool.setuptools]
packages = ["vpg"]
include-package-data = true

[tool.setuptools.package-data]
vpg = ["libvpg_python.so"]

[tool.uv]
package = true
